# rcore

./: Cargo.toml
core/: Cargo.toml
core-examples/: Cargo.toml
core-examples/src/: constructor.rs  main.rs
core-lib/: Cargo.toml  log4rs.example.yaml
core-lib/src/: lib.rs
core-lib/src/command/: commands.rs  context.rs  lexer.rs  mod.rs  parser.rs  registry.rs  shell.rs
core-lib/src/command/oso/: builtins.rs  class.rs  class_method.rs  errors.rs  from_polar.rs  mod.rs  to_polar.rs  value.rs
core-lib/src/core/: command.rs
core-lib/src/core/command/: mod.rs  oso_integration.rs  parser.rs  registry.rs  values.rs
core-lib/src/core/command/oso/: builtins.rs  class.rs  class_method.rs  from_polar.rs  mod.rs  to_polar.rs  value.rs
core-lib/tests/: common.rs  shell_test.rs
oso/: Cargo.toml
oso-derive/: Cargo.toml
oso-derive/src/: lib.rs
oso/src/: lib.rs
oso/src/host/: class.rs  class_method.rs  mod.rs  value.rs
src/: main.rs
src/core/: command.rs
src/core/command/: command_parser.rs  lexer.rs  statement_parser.rs
